--- a/Changelog
+++ b/Changelog
@@ -22,3 +22,6 @@ Added Kodi XML Builder
 Added Kodi M3U Builder
 Added VLC M3U Builder
 Rebuild All APIS Structure
+
+[19 August 2020]
+Added JW Player Free
